Fixed wrong padding for year text in portfolio section

--- a/app/js/modules/portfolio/css/timeline.css
+++ b/app/js/modules/portfolio/css/timeline.css
@@ -14,7 +14,7 @@
     border: 1px solid #d4d4d4;
     margin-right: 60px;
     text-align: center;
-    padding-top: 25px;
+    padding-top: 28px;
     color: #d4d4d4;
 }
 
